--- a/src/client/stylesheets/application.scss
+++ b/src/client/stylesheets/application.scss
@@ -5,3 +5,23 @@
 @use 'core';
 @use 'components';
 @use 'partials';
+
+.project-history-chart {
+  background: #f8f8f8;
+  width: 100%;
+  height: 200px;
+}
+
+.govuk-summary-card {
+  height: 100%;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.standards-overview {
+  height: 200px;
+  margin-bottom: 20px;
+}
