fix: wonky cards

--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -61,15 +61,15 @@
         <div class="govuk-grid-column-one-half">
           <div class="govuk-summary-card">
             <div class="govuk-summary-card__title-wrapper">
-              <h2 class="govuk-summary-card__title">Service Standard Progress</h2>
+              <h2 class="govuk-summary-card__title">Service Standards Progress</h2>
             </div>
             <div class="govuk-summary-card__content">
               <div class="standards-overview">
                 <canvas id="standards-pie-chart"></canvas>
               </div>
-              <p class="govuk-body">
+              <p class="govuk-body govuk-!-margin-top-4">
                 <a href="/projects/{{ project.id }}/standards" class="govuk-link">
-                  View Standards Progress
+                  View standards progress
                 </a>
               </p>
             </div>
