--- a/src/server/admin/index.njk
+++ b/src/server/admin/index.njk
@@ -28,11 +28,13 @@
           </button>
         </form>
         
-        <form method="POST" action="/admin/projects/delete" class="govuk-!-display-inline">
-          <button class="govuk-button govuk-button--warning" data-module="govuk-button">
-            Delete All Projects
-          </button>
-        </form>
+        <div class="govuk-!-display-inline">
+          {{ govukButton({
+            text: "Delete All Projects",
+            href: "/admin/projects/delete/confirm",
+            classes: "govuk-button--warning"
+          }) }}
+        </div>
       </div>
       
       {% if projects and projects.length > 0 %}
@@ -50,11 +52,13 @@
                 <td class="govuk-table__cell">{{ project.name }}</td>
                 <td class="govuk-table__cell">{{ project.status }}</td>
                 <td class="govuk-table__cell">
-                  <form method="POST" action="/admin/projects/{{ project.id }}/delete" class="govuk-!-margin-bottom-0">
-                    <button type="submit" class="govuk-button govuk-button--warning govuk-!-margin-bottom-0" data-module="govuk-button">
-                      Delete
-                    </button>
-                  </form>
+                  <div class="govuk-!-margin-bottom-0">
+                    {{ govukButton({
+                      text: "Delete",
+                      href: "/admin/projects/" + project.id + "/delete/confirm",
+                      classes: "govuk-button--warning govuk-!-margin-bottom-0"
+                    }) }}
+                  </div>
                 </td>
               </tr>
             {% endfor %}
@@ -76,11 +80,13 @@
           </button>
         </form>
         
-        <form method="POST" action="/admin/standards/delete" class="govuk-!-display-inline">
-          <button class="govuk-button govuk-button--warning" data-module="govuk-button">
-            Delete All Standards
-          </button>
-        </form>
+        <div class="govuk-!-display-inline">
+          {{ govukButton({
+            text: "Delete All Standards",
+            href: "/admin/standards/delete/confirm",
+            classes: "govuk-button--warning"
+          }) }}
+        </div>
       </div>
       
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
