fix: remove isues

--- a/src/server/admin/index.njk
+++ b/src/server/admin/index.njk
@@ -24,7 +24,7 @@
       <div class="govuk-button-group">
         <form method="POST" action="/admin/projects/seed" class="govuk-!-display-inline govuk-!-margin-right-2">
           <button class="govuk-button" data-module="govuk-button">
-            Add Sample Projects
+            Add Sample Projects (Preserves Existing)
           </button>
         </form>
         
