--- a/src/server/admin/index.njk
+++ b/src/server/admin/index.njk
@@ -16,11 +16,19 @@
     }) }}
   {% endif %}
 
+  {% if isTestEnvironment %}
+    {{ govukNotificationBanner({
+      text: "You are in the test environment. Destructive operations (delete functions) are disabled.",
+      type: "important"
+    }) }}
+  {% endif %}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-m">Projects</h2>
       <p class="govuk-body">Currently {{ projectsCount }} projects loaded</p>
       
+      {% if not isTestEnvironment %}
       <div class="govuk-button-group">
         <form method="POST" action="/admin/projects/seed" class="govuk-!-display-inline govuk-!-margin-right-2">
           <button class="govuk-button" data-module="govuk-button">
@@ -36,6 +44,7 @@
           }) }}
         </div>
       </div>
+      {% endif %}
       
       {% if projects and projects.length > 0 %}
         <table class="govuk-table">
@@ -52,6 +61,7 @@
                 <td class="govuk-table__cell">{{ project.name }}</td>
                 <td class="govuk-table__cell">{{ project.status }}</td>
                 <td class="govuk-table__cell">
+                  {% if not isTestEnvironment %}
                   <div class="govuk-!-margin-bottom-0">
                     {{ govukButton({
                       text: "Delete",
@@ -59,6 +69,7 @@
                       classes: "govuk-button--warning govuk-!-margin-bottom-0"
                     }) }}
                   </div>
+                  {% endif %}
                 </td>
               </tr>
             {% endfor %}
@@ -80,6 +91,7 @@
           </button>
         </form>
         
+        {% if not isTestEnvironment %}
         <div class="govuk-!-display-inline">
           {{ govukButton({
             text: "Delete All Standards",
@@ -87,6 +99,7 @@
             classes: "govuk-button--warning"
           }) }}
         </div>
+        {% endif %}
       </div>
       
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
