--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -3,6 +3,9 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+{% from "govuk/components/tag/macro.njk" import govukTag %}
+{% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
+{% from "govuk/components/tabs/macro.njk" import govukTabs %}
 
 {% block content %}
   <div class="govuk-grid-row">
@@ -83,12 +86,6 @@
           text: "Edit Project",
           href: "/projects/" + project.id + "/edit",
           classes: "govuk-button--secondary"
-        }) }}
-        
-        {{ govukButton({
-          text: "Delete Project",
-          href: "/admin/projects/" + project.id + "/delete/confirm",
-          classes: "govuk-button--warning"
         }) }}
       </div>
     </div>
