--- a/src/client/stylesheets/application.scss
+++ b/src/client/stylesheets/application.scss
@@ -23,3 +23,78 @@
 .standards-overview {
   height: 150px;
 }
+
+// Timeline Component Styles
+.timeline {
+  margin-bottom: 2em;
+  position: relative;
+}
+
+.timeline::before {
+  background-color: #1d70b8;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 5px;
+}
+
+.timeline__event {
+  margin-bottom: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+
+.timeline__event::before {
+  background-color: #1d70b8;
+  content: "";
+  height: 5px;
+  left: 0;
+  position: absolute;
+  top: 10px;
+  width: 15px;
+}
+
+.timeline__event-title {
+  font-size: 19px;
+  font-weight: 700;
+  margin-bottom: 5px;
+  margin-top: 0;
+}
+
+.timeline__event-meta {
+  color: #505a5f;
+  display: block;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.timeline__event-content {
+  margin: 0;
+}
+
+// Status colors
+.tag-red {
+  background-color: #d4351c;
+  color: #ffffff;
+}
+
+.tag-yellow {
+  background-color: #ffdd00;
+  color: #0b0c0c;
+}
+
+.tag-green {
+  background-color: #00703c;
+  color: #ffffff;
+}
+
+.timeline-tag {
+  display: inline-block;
+  padding: 2px 8px;
+  font-weight: 700;
+  font-size: 14px;
+  border-radius: 3px;
+  margin-left: 8px;
+}
